# miinto-feed-generator-main

./: .env.example  .gitignore  ACCEPTANCE.md  README.md  pyproject.toml  requirements.txt  rules_cheatsheet.md  serve.py
config/: feed_config.yaml  fx_rates.csv  vat_rates.csv
docs/: miinto-feed-spec.md
mapping/: category_map.csv  mapping_spec.md
reference/: reference_feed.tsv
sample_data/: README.md  products_export.csv
src/miinto_feed/: __init__.py  __main__.py  cli.py  config_loader.py  generator.py  publish.py  transforms.py
tests/: test_generator.py  test_output.py  test_transforms.py
